Ticket Card footer right positioned order code texts alignment fixed

--- a/src/app/components/tickets-component/tickets-component.component.scss
+++ b/src/app/components/tickets-component/tickets-component.component.scss
@@ -62,6 +62,7 @@ div.workspace-core {
 	padding: .5rem 1rem;
 	background-color: inherit !important;
 	border: none !important;
+  padding-left: 0;
 }
 
 .card {
